# django_drf_ecommerce

./: .env.example  .gitignore  pyproject.toml  pytest.ini  schema.yml
drfecommerce/: settings.py  urls.py
drfecommerce/product/: admin.py
drfecommerce/product/migrations/: 0001_initial.py  0002_alter_category_name.py  0003_alter_brand_name.py  0004_productline.py  0005_product_is_active.py  0006_product_slug.py
drfecommerce/product/models/: __init__.py  brand.py  category.py  product.py  product_line.py
drfecommerce/product/serializers/: __init__.py  brand.py  category.py  product.py  product_line.py
drfecommerce/product/views/: __init__.py  brand.py  category.py  product.py
drfecommerce/settings/: base.py
drfecommerce/tests/: conftest.py
drfecommerce/tests/factories/: __init__.py  brand.py  category.py  product.py
drfecommerce/tests/product/: test_brand_endpoint.py  test_brand_model.py  test_category_endpoint.py  test_category_model.py  test_product_endpoint.py  test_product_model.py
