[tool.poetry]
name = "django-drf-ecommerce"
version = "0.1.0"
description = "Learning Django REST Framework for E-commerce"
authors = ["Socheath Horl <horl.socheath@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
